[339f7f27040c7f6f770279967bdea69c66fcf91e]: Updated '_i18n/pt/_posts/CieloLIO/2003-03-03-FAQ-CieloLio.md' via CloudCannon

--- a/faq/faq-cielolio.html
+++ b/faq/faq-cielolio.html
@@ -207,6 +207,94 @@ O Bluetooth da Cielo LIO pode ser utilizado para realizar a comunicação e a tr
   <p>https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk</p>
 </blockquote>
 
+<h1 id="integração-remota">Integração Remota</h1>
+
+<h2 id="preciso-me-cadastrar-para-realizar-testes-1">Preciso me cadastrar para realizar testes?</h2>
+
+<p>Sim, é fundamental o cadastro no portal para que você possa obter os tokens de acesso e testar as suas aplicações.</p>
+
+<h2 id="o-que-eu-preciso-para-colocar-a-integração-em-produção">O que eu preciso para colocar a integração em produção?</h2>
+
+<p>Se você já realizou todos os testes em Sandbox e deseja enviar pedidos para a Cielo LIO, entre em contato através do formulário do Portal de Desenvolvedores da Cielo com o assunto “Integração Remota Cielo LIO - Tokens e informações para Produção” e preencha os dados necessários para receber os tokens de produção</p>
+
+<h1 id="cielo-store">Cielo Store</h1>
+
+<h2 id="o-que-é-a-cielo-store">O que é a Cielo Store?</h2>
+
+<p>É o marketplace - a loja de aplicativos da Cielo LIO. Na loja, os clientes poderão acessar a Cielo Store por meio da Cielo LIO e fazer download dos aplicativos que melhor atendem seu modelo de negócio e que têm por objetivo facilitar a gestão e controle de suas vendas, melhorar o relacionamento deles com seus clientes e impulsionar suas vendas.</p>
+
+<p>Para acessar e realizar o upload de aplicativos na Cielo Store, acesse:</p>
+
+<blockquote>
+  <p>https://www.cieloliostore.com.br</p>
+</blockquote>
+
+<h2 id="fiz-meu-cadastro-o-que-devo-fazer-agora">Fiz meu cadastro! O que devo fazer agora?</h2>
+
+<p>O desenvolvedor deverá escolher de acordo com o propósito de distribuição de seu aplicativo entre:</p>
+
+<ul>
+  <li>Aplicativo Privado na Loja Privada</li>
+  <li>Aplicativo Público na Cielo Store</li>
+</ul>
+
+<p><br /></p>
+
+<p>Caso decida por Aplicativo Privado na Loja Privada, envie um ticket no Portal de Desenvolvedores e escolha no assunto: “Criação Loja Privada” e preenche os campos necessários.
+Caso decida por Aplicativo Público na Cielo Store, você já consegue fazer o upload do aplicativo e enviá-lo para Certificação.</p>
+
+<h2 id="quais-são-os-browsersnavegadores-recomendados-para-upload-de-aplicativo-na-cielo-store">Quais são os Browsers/Navegadores recomendados para Upload de aplicativo na Cielo Store?</h2>
+
+<p>Recomendamos utilizar o Google Chrome ou Mozilla Firefox preferencialmente para realizar o upload de aplicativos na Cielo Store.</p>
+
+<h2 id="como-faço-para-me-cadastrar-como-um-ec-na-cielo">Como faço para me cadastrar como um EC na Cielo?</h2>
+
+<p>Após a aprovação da certificação do aplicativo, quando você envia-lo para produção no Dev Console, haverá um formulário que deverá ser preenchido e automaticamente você se tornará um EC.</p>
+
+<h2 id="preciso-ser-cadastrado-na-cielo-para-receber-o-pagamento-dos-aplicativos">Preciso ser cadastrado na Cielo para receber o pagamento dos aplicativos?</h2>
+
+<p>Sim! Como o pagamento é realizado em agenda financeira, você precisa se cadastrar como um estabelecimento comercial (EC).</p>
+
+<h2 id="como-recebo-o-pagamento-dos-aplicativos">Como recebo o pagamento dos aplicativos?</h2>
+
+<p>O pagamento será feito em agenda financeira.</p>
+
+<h2 id="caso-meu-aplicativo-não-seja-gratuito-a-cielo-store-fica-com-parte-do-valor-de-venda">Caso meu aplicativo não seja gratuito, a Cielo Store fica com parte do valor de venda?</h2>
+
+<p>Sim! A Cielo Store atua com o modelo de cobrança 70/30, ou seja, 70% do valor de venda ou mensalidade do aplicativo é direcionado para o desenvolvedor e 30% para Cielo.</p>
+
+<h2 id="tenho-algum-custo-para-colocar-meu-aplicativo-na-cielo-store">Tenho algum custo para colocar meu aplicativo na Cielo Store?</h2>
+
+<p>Não! A integração com a Cielo LIO é gratuita.</p>
+
+<h2 id="quais-as-etapas-existentes-na-cielo-store-para-meu-publicar-meu-aplicativo">Quais as etapas existentes na Cielo Store para meu publicar meu aplicativo?</h2>
+
+<h3 id="1etapa-de-desenvolvimento">1.Etapa de Desenvolvimento</h3>
+
+<p>Nessa etapa ocorre a integração do aplicativo com a Cielo LIO e o desenvolvedor é responsável por realizar essa integração para que seu aplicativo consuma as funcionalidades da plataforma Cielo LIO. Caso seu aplicativo não precise estar integrado as funcionalidades da plataforma, basta seguir para a etapa de publicação.</p>
+
+<h3 id="2etapa-de-testes">2.Etapa de Testes</h3>
+
+<p>A Cielo disponibiliza um aplicativo que simula o ambiente da Cielo LIO em qualquer dispositivo Android, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO. O download do Emulador é feito acessando a documentação da Integração Local no Portal de Desenvolvedores.</p>
+
+<h3 id="3etapa-de-publicação">3.Etapa de Publicação</h3>
+
+<p>Crie sua conta na Cielo Store (Dev Console) e faça a publicação do aplicativo (arquivo apk) na Cielo Store.</p>
+
+<p>A Cielo recomenda que o desenvolvedor faça a geração do arquivo apk utilizando o Android Studio para garantir sucesso no upload do aplicativo na Cielo Store.</p>
+
+<h3 id="4etapa-de-certificação">4.Etapa de Certificação</h3>
+
+<p>No próprio Dev Console, o aplicativo publicado poderá ser promovido para certificação. O time de certificação realizará testes de segurança, funcionais e validações de negócio para garantir a integridade nos fluxos do aplicativo.</p>
+
+<h3 id="5etapa-de-produção">5.Etapa de Produção</h3>
+
+<p>No próprio Dev Console, assim que a certificação for aprovada, o desenvolvedor será notificado e poderá promover o aplicativo para o status de produção.</p>
+
+<h2 id="como-faço-para-mudar-o-nome-do-meu-aplicativo">Como faço para mudar o nome do meu aplicativo?</h2>
+
+<p>É necessário criar um novo aplicativo com package name diferente e seguir o processo normal de upload de aplicativo na Cielo Store.</p>
+
 </div>
 
 
