[29d6252250bc68e73b5f72446c9c44174678e5db]: Fix API Docs - Endpoints

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -458,8 +458,9 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.</p>
 
-<p><strong>Sandbox</strong>
-O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.</p>
+<p><strong>Sandbox</strong></p>
+
+<p>O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.</p>
 
 <p>Para utilizar o ambiente de sandbox, não é necessário que você forneça o número do estabelecimento. Você poderá iniciar os testes sem a necessidade de ter uma Cielo LIO. Para obter os tokens de sandbox, crie uma conta no portal e crie o Client-Id.</p>
 
@@ -469,8 +470,9 @@ O ambiente de sandbox é destinado à realização de testes com parceiros da Ci
   <p>https://api.cielo.com.br/sandbox-lio/order-management/v1</p>
 </blockquote>
 
-<p><strong>Produção</strong>
-O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.</p>
+<p><strong>Produção</strong></p>
+
+<p>O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.</p>
 
 <p>Para utilizar o ambiente de produção, é necessário que você entre em contato através do formulário. Juntamente com os dados pessoais, forneça o número do estabelecimento. Para utilizar o ambiente de produção, é necessário que você possua uma Cielo LIO.</p>
 
