[34582c914da2ae14e44b53574e7fcc5ba5412358]: Updated '_i18n/pt/_posts/CieloLIO/2003-03-03-FAQ-CieloLio.md' via CloudCannon

--- a/faq/faq-cielolio.html
+++ b/faq/faq-cielolio.html
@@ -295,6 +295,26 @@ Caso decida por Aplicativo Público na Cielo Store, você já consegue fazer o u
 
 <p>É necessário criar um novo aplicativo com package name diferente e seguir o processo normal de upload de aplicativo na Cielo Store.</p>
 
+<h2 id="É-possível-editar-as-informações-do-meu-aplicativo-já-publicado-na-cielo-store">É possível editar as informações do meu aplicativo já publicado na Cielo Store?</h2>
+
+<p>Sim! Basta enviar um e-mail pelo nosso suporte do Portal de Desenvolvedores em “Envie a sua pergunta”, solicitando a edição das informações de seu aplicativo.</p>
+
+<h2 id="como-faço-para-baixar-aplicativos-na-cielo-lio">Como faço para baixar aplicativos na Cielo LIO?</h2>
+
+<p>Na Cielo LIO clique na aba Ajuda -&gt; Sobre Cielo LIO -&gt; Atualizar Aplicativos Cielo LIO.</p>
+
+<p>A partir desse momento todos os aplicativos disponibilizados para essa LIO serão baixados e instalados na Cielo LIO e ficarão visíveis na aba Apps.</p>
+
+<h2 id="qual-o-limite-máximo-de-tamanho-do-aplicativo-para-upload-cielo-store">Qual o limite máximo de tamanho do aplicativo para upload Cielo Store?</h2>
+
+<p>O aplicativo deve possuir no máximo 100Mb para que o upload na Cielo Store seja realizado com sucesso.</p>
+
+<h2 id="qual-a-diferença-entre-loja-pública-e-loja-privada">Qual a diferença entre Loja Pública e Loja Privada?</h2>
+
+<p>Na Loja Pública, o aplicativo ficara disponível na Cielo Store para todos os clientes que possuem LIO.</p>
+
+<p>Na Loja Privada o modelo de distribuição consiste em um desenvolvedor (ou grupo de desenvolvedores), estando relacionado a uma loja privada. Esse modelo visa a distribuição seletiva do aplicativo, dado que ele só é instalado em LIOs cadastradas para aquela loja específica. O aplicativo que está na Loja Privada não estará disponível na Loja Pública.</p>
+
 </div>
 
 
