[a9ead58b8df03bb0f38339eef449ddd02b06452d]: Updated '_i18n/pt/_posts/CieloLIO/2003-03-03-FAQ-CieloLio.md' via CloudCannon

--- a/faq/faq-cielolio.html
+++ b/faq/faq-cielolio.html
@@ -207,7 +207,7 @@ O Bluetooth da Cielo LIO pode ser utilizado para realizar a comunicação e a tr
   <p>https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk</p>
 </blockquote>
 
-<h1 id="integração-remota">Integração Remota</h1>
+<h1 id="dúvidas-integração-remota">Dúvidas Integração Remota</h1>
 
 <h2 id="preciso-me-cadastrar-para-realizar-testes-1">Preciso me cadastrar para realizar testes?</h2>
 
@@ -217,7 +217,7 @@ O Bluetooth da Cielo LIO pode ser utilizado para realizar a comunicação e a tr
 
 <p>Se você já realizou todos os testes em Sandbox e deseja enviar pedidos para a Cielo LIO, entre em contato através do formulário do Portal de Desenvolvedores da Cielo com o assunto “Integração Remota Cielo LIO - Tokens e informações para Produção” e preencha os dados necessários para receber os tokens de produção</p>
 
-<h1 id="cielo-store">Cielo Store</h1>
+<h1 id="dúvidas-cielo-store">Dúvidas Cielo Store</h1>
 
 <h2 id="o-que-é-a-cielo-store">O que é a Cielo Store?</h2>
 
