[49f87eeee3aed8457d409254c271f5579eb71809]: Fix API Docs - Endpoint

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -458,7 +458,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.</p>
 
-<p><strong>Sandbox</strong></p>
+<h3 id="sandbox">Sandbox</h3>
 
 <p>O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.</p>
 
@@ -470,7 +470,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
   <p>https://api.cielo.com.br/sandbox-lio/order-management/v1</p>
 </blockquote>
 
-<p><strong>Produção</strong></p>
+<h3 id="produção">Produção</h3>
 
 <p>O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.</p>
 
