--- a/faq/faq-cielolio.html
+++ b/faq/faq-cielolio.html
@@ -269,27 +269,36 @@ Caso decida por Aplicativo Público na Cielo Store, você já consegue fazer o u
 
 <h2 id="quais-as-etapas-existentes-na-cielo-store-para-meu-publicar-meu-aplicativo">Quais as etapas existentes na Cielo Store para meu publicar meu aplicativo?</h2>
 
-<h3 id="1etapa-de-desenvolvimento">1.Etapa de Desenvolvimento</h3>
-
-<p>Nessa etapa ocorre a integração do aplicativo com a Cielo LIO e o desenvolvedor é responsável por realizar essa integração para que seu aplicativo consuma as funcionalidades da plataforma Cielo LIO. Caso seu aplicativo não precise estar integrado as funcionalidades da plataforma, basta seguir para a etapa de publicação.</p>
-
-<h3 id="2etapa-de-testes">2.Etapa de Testes</h3>
-
-<p>A Cielo disponibiliza um aplicativo que simula o ambiente da Cielo LIO em qualquer dispositivo Android, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO. O download do Emulador é feito acessando a documentação da Integração Local no Portal de Desenvolvedores.</p>
-
-<h3 id="3etapa-de-publicação">3.Etapa de Publicação</h3>
-
-<p>Crie sua conta na Cielo Store (Dev Console) e faça a publicação do aplicativo (arquivo apk) na Cielo Store.</p>
-
-<p>A Cielo recomenda que o desenvolvedor faça a geração do arquivo apk utilizando o Android Studio para garantir sucesso no upload do aplicativo na Cielo Store.</p>
-
-<h3 id="4etapa-de-certificação">4.Etapa de Certificação</h3>
-
-<p>No próprio Dev Console, o aplicativo publicado poderá ser promovido para certificação. O time de certificação realizará testes de segurança, funcionais e validações de negócio para garantir a integridade nos fluxos do aplicativo.</p>
-
-<h3 id="5etapa-de-produção">5.Etapa de Produção</h3>
-
-<p>No próprio Dev Console, assim que a certificação for aprovada, o desenvolvedor será notificado e poderá promover o aplicativo para o status de produção.</p>
+<table>
+  <thead>
+    <tr>
+      <th>Etapas</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Etapa de Desenvolvimento</strong></td>
+      <td>Nessa etapa ocorre a integração do aplicativo com a Cielo LIO e o desenvolvedor é responsável por realizar essa integração para que seu aplicativo consuma as funcionalidades da plataforma Cielo LIO. Caso seu aplicativo não precise estar integrado as funcionalidades da plataforma, basta seguir para a etapa de publicação.</td>
+    </tr>
+    <tr>
+      <td><strong>Etapa de Testes</strong></td>
+      <td>A Cielo disponibiliza um aplicativo que simula o ambiente da Cielo LIO em qualquer dispositivo Android, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO. O download do Emulador é feito acessando a documentação da Integração Local no Portal de Desenvolvedores.</td>
+    </tr>
+    <tr>
+      <td><strong>Etapa de Publicação</strong></td>
+      <td>Crie sua conta na Cielo Store (Dev Console) e faça a publicação do aplicativo (arquivo apk) na Cielo Store.A Cielo recomenda que o desenvolvedor faça a geração do arquivo apk utilizando o Android Studio para garantir sucesso no upload do aplicativo na Cielo Store.</td>
+    </tr>
+    <tr>
+      <td><strong>Etapa de Certificação</strong></td>
+      <td>No próprio Dev Console, o aplicativo publicado poderá ser promovido para certificação. O time de certificação realizará testes de segurança, funcionais e validações de negócio para garantir a integridade nos fluxos do aplicativo.</td>
+    </tr>
+    <tr>
+      <td><strong>Etapa de Produção</strong></td>
+      <td>No próprio Dev Console, assim que a certificação for aprovada, o desenvolvedor será notificado e poderá promover o aplicativo para o status de produção.</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2 id="como-faço-para-mudar-o-nome-do-meu-aplicativo">Como faço para mudar o nome do meu aplicativo?</h2>
 
