[2c860c511e3f7c38d09eae506b5cda2ec6165408]: Fix API Docs HTTP Headers

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -505,6 +505,8 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p><strong>Merchant-Id</strong>: Token que identifica o estabelecimento comercial dentro do servidor Order Manager da Cielo LIO. Sua geração ocorre durante o processo de cadastro do Client ID. Seu valor pode ser visualizado na coluna “Merchant ID”, dentro do menu “Desenvolvedor” -&gt; “Client ID Cadastrados”.</p>
 
+<h3 id="http-status-code">HTTP Status Code</h3>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
