[ae50be8a368e24b47252c34bdd977b802c5caefb]: Updated '_layouts/manual.html' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14350,7 +14350,16 @@ More information and complete integration, you can find in the link: https://dev
 <p>Opening hours: 24 hours a day, 7 days a week.</p>
 
 </div>
-
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
             <div class="footer-conteudo">
     <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
