--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -3096,7 +3096,16 @@ It’s possible to select one or more options of shipping. They are presented to
 </strong></aside></strong></aside></strong></aside></strong></aside>
 
 </div>
-
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
             <div class="footer-conteudo">
     <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
