--- a/en/manual/webservice-1-5.html
+++ b/en/manual/webservice-1-5.html
@@ -3415,7 +3415,16 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 <p>International Program of Mastercard allows the customer authentication at the purchase moment on e-commerce environment. Visit: <a href="http://www.verifiedbyvisa.com.br/">http://www.verifiedbyvisa.com.br/</a> to more information.</p>
 
 </div>
-
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
             <div class="footer-conteudo">
     <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
