[171ff1aeb0757bebac3f59ec4e8f43a061abdcd4]: Fix HTTP Headers API Docs

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -490,14 +490,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <h3 id="http-headers">HTTP Headers</h3>
 
-<table>
-  <tbody>
-    <tr>
-      <td>Todas as chamadas da API Integração Remota</td>
-      <td>Cielo LIO Order Manager necessitam que as informações abaixo estejam presentes no Header na requisição:</td>
-    </tr>
-  </tbody>
-</table>
+<p>Todas as chamadas da API Integração Remota Cielo LIO Order Manager necessitam que as informações abaixo estejam presentes no Header na requisição:</p>
 
 <p><strong>Client-Id</strong>: Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna “Client ID”, dentro do menu “Desenvolvedor” -&gt; “Client ID Cadastrados”.</p>
 
