[8d1da7eaeb865c9ba08de33875ce3cf1dc80d548]: Fix Entidades, Transaction

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -746,7 +746,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
     <tr>
       <td>id</td>
       <td>Texto</td>
-      <td>“UUID que identifica unicamente a transação.</td>
+      <td>“UUID” que identifica unicamente a transação.</td>
       <td>Sim</td>
     </tr>
     <tr>
