[59bf0ba9bacade8d13a0555eab0e715f0941ee92]: Add Entidades, Card

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -818,6 +818,41 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
   </tbody>
 </table>
 
+<h4 id="card">Card</h4>
+
+<p>O Card é uma representação do cartão que foi utilizado para realizar o pagamento/transação.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>brand</td>
+      <td>Texto</td>
+      <td>Bandeira do cartão (VISA e MASTER).</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>bin</td>
+      <td>Número</td>
+      <td>Bin (primeiros 6 dígitos) do cartão.</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>last</td>
+      <td>Número</td>
+      <td>Last (últimos 4 dígitos) do cartão.</td>
+      <td>Sim</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
