--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -853,6 +853,42 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
   </tbody>
 </table>
 
+<h4 id="payment-product">Payment Product</h4>
+
+<p>O Payment Product é uma representação da forma de pagamento utilizada para realizar um pagamento.
+Ex.: Crédito, Débito, etc.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>number</td>
+      <td>Texto</td>
+      <td>Identificação numérica do produto primário da Cielo.</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>Número</td>
+      <td>Nome do produto primário utilizado.</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>sub</td>
+      <td>Número</td>
+      <td>Produto secundário.</td>
+      <td>Sim</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
