[a42d91b71a095170af81162be4950f1196ed27b5]: Add Entidades, Sub Payment

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -889,6 +889,36 @@ Ex.: Crédito, Débito, etc.</p>
   </tbody>
 </table>
 
+<h4 id="sub-payment-product">Sub Payment Product</h4>
+
+<p>O Sub Payment Product é uma representação com o complemento da forma de pagamento utilizada para realizar um pagamento.
+Ex.: À Vista, Parcelado, etc.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>number</td>
+      <td>Texto</td>
+      <td>Identificação numérica do produto primário da Cielo.</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>Número</td>
+      <td>Nome do produto primário utilizado.</td>
+      <td>Sim</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
