[636c59867b6ecdb33a1e92f9bbea730a50f6c816]: Moved '_i18n/pt/_posts/Documentos_Adicionais/2015-08-25-Habilitacao-meios-de-pagamento.md' to '_i18n/pt/_posts/2015-08-25-Habilitacao-meios-de-pagamento.md' via CloudCannon

--- a/tutorial/boas-praticas-de-e-commerce.html
+++ b/tutorial/boas-praticas-de-e-commerce.html
@@ -104,7 +104,7 @@
 
 <h2 id="números-de-cartões">Números de cartões</h2>
 
-<p><img src="http://maroon-cavern.cloudvent.net/images/cartao.png" alt="Cartão Visa" /></p>
+<p><img src="/images/cartao.png" alt="Cartão Visa" /></p>
 
 <p>Basicamente, o número do cartão é composto por três partes:</p>
 
