--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -390,7 +390,7 @@
 
 <p>Normally, the browser automatically updates the Certificate. If it does not and the client contacts, the following steps must be informed:</p>
 
-<h4 id="step-1">Step 1:</h4>
+<p><strong>Step 1:</strong></p>
 
 <p>Save the three files below into a new folder, or into a folder that can be easily remembered, as it will be used later:</p>
 
@@ -400,7 +400,7 @@
   <li><a href="./attachment/ecommerce.cielo.com.br.crt">E-Commerce Cielo Certificate</a></li>
 </ul>
 
-<h4 id="step-2o">Step 2o:</h4>
+<p><strong>Step 2:</strong></p>
 
 <p>In “Internet Explorer”, click on “Tools” menu and go to “Internet Options”:</p>
 
@@ -414,7 +414,7 @@
 
 <p><img src="./images/certificado-instalar-gc-1.jpg" alt="Install GC" /></p>
 
-<h4 id="step-3">Step 3:</h4>
+<p><strong>Step 3:</strong></p>
 
 <p>In Internet Explorer, under “Certificates”, click on “Import.”</p>
 
@@ -428,7 +428,7 @@
 
 <p><img src="./images/certificado-instalar-gc-2.jpg" alt="Install GC" /></p>
 
-<h4 id="step-4">Step 4:</h4>
+<p><strong>Step 4:</strong></p>
 
 <p>In Internet Explorer and Chrome “Certificate Import Wizard”, click on “Next”.</p>
 
@@ -440,7 +440,7 @@
 
 <p><img src="./images/certificado-instalar-ff-3.jpg" alt="Install FF" /></p>
 
-<h4 id="step-5">Step 5:</h4>
+<p><strong>Step 5:</strong></p>
 
 <p>In Chrome and Internet Explorer “Certificate Import Wizard”, click on “Search”, look for the folder where the files are and select the file “cieloecommerce.cielo.com.br.crt, click on “Open” and then “Next”.</p>
 
@@ -448,19 +448,19 @@
 
 <p><img src="./images/certificado-instalar-ie-gc-6.jpg" alt="Install IE and GC" /></p>
 
-<h4 id="step-6">Step 6:</h4>
+<p><strong>Step 6:</strong></p>
 
 <p>Select the desired option: add the Certificate in a default folder or search for the folder of your choice.</p>
 
 <p><img src="./images/certificado-instalar-ie-gc-7.jpg" alt="Install IE and GC" /></p>
 
-<h4 id="step-7">Step 7:</h4>
+<p><strong>Step 7:</strong></p>
 
 <p>Click on “Finish”.</p>
 
 <p><img src="./images/certificado-instalar-ie-gc-8.jpg" alt="Install IE and GC" /></p>
 
-<h4 id="step-8">Step 8:</h4>
+<p><strong>Step 8:</strong></p>
 
 <p>Click on “Ok” to complete the import.</p>
 
@@ -472,7 +472,7 @@
 
 <p><img src="./images/certificado-instalar-ie-gc-10.jpg" alt="Install IE and GC" /></p>
 
-<h4 id="step-9">Step 9:</h4>
+<p><strong>Step 9:</strong></p>
 
 <p>Repeat the same procedure for the 3 sent files.</p>
 
