[67170d2be7fa8cc86ebe5cd039222633eb6f2901]: Updated '_i18n/pt/_posts/Documentos_Adicionais/2017-11-22-C\303\263digosdeRetornoCielo.md' via CloudCannon

--- a/tutorial/códigosderetornocielo.html
+++ b/tutorial/códigosderetornocielo.html
@@ -120,7 +120,7 @@
     </tr>
     <tr>
       <td><strong>Status</strong></td>
-      <td>Depois de criada a transação, esses códigos serão retornados, informando como se encontra a transação no momento (EX: <code class="highlighter-rouge">Autorizada</code> &gt; <code class="highlighter-rouge">Capturada</code> &gt; <code class="highlighter-rouge">Cancelada</code>)<br /><br />*Retornado no campo <code class="highlighter-rouge">Status</code> *</td>
+      <td>Depois de criada a transação, esses códigos serão retornados, informando como se encontra a transação no momento (EX: <code class="highlighter-rouge">Autorizada</code> &gt; <code class="highlighter-rouge">Capturada</code> &gt; <code class="highlighter-rouge">Cancelada</code>)<br /><br />*Retornado no campo <code class="highlighter-rouge">Status</code></td>
     </tr>
     <tr>
       <td><strong>Retorno das Vendas</strong></td>
@@ -935,86 +935,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>0</td>
-      <td>Criada</td>
-      <td>Transação criada</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>Em andamento</td>
-      <td>Processamento em andamento</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Autenticada</td>
-      <td>Confirmação de autenticação</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Não Autenticada</td>
-      <td>Transação não autenticavel</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Autorizada</td>
-      <td>Confirmação de autorização</td>
-      <td>Captura ou Cancelamento</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>Não Autorizada</td>
-      <td>Confirmação de não autorização</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>6</td>
-      <td>Capturada</td>
-      <td>Confirmação de captura</td>
-      <td>N/A ou cancelamento</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>Cancelada</td>
-      <td>Confirmação de cancelamento</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>10</td>
-      <td>Em autenticação</td>
-      <td>Processamento de autenticação</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>Em cancelamento</td>
-      <td>Processamento para cancelamento</td>
-      <td>N/A</td>
-      <td>Não</td>
-      <td> </td>
-    </tr>
     <tr>
       <td>00</td>
       <td>Transação autorizada com sucesso.</td>
