[57ab137aab705874d17a5de4f697bcacd3bfe2d3]: Deleted '_i18n/pt/_posts/api-cielo/2003-03-03-Cielo-eCommerce.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -47,9 +47,8 @@
                 </ul>
             </div>
             <div class="dark-box"></div>
-        
             <div class="overlay"></div>
-
+        
             <div id="submenu">
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
@@ -3317,6 +3316,12 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
             if(!$(this).parent().hasClass('language-group')) {
                 $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
             }
+        });
+
+        $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
+            let height = $(this).outerHeight();
+
+            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + height + 'px;"></div> ');
         });
 
         $('.hide-btn').click(function() {
