[516314c70a3a26da2c15727de6a29079636b9402]: Fix Recursos, Delete

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1336,8 +1336,9 @@ Ex.: À Vista, Parcelado, etc.</p>
 <p>Esse recurso é utilizado para excluir um pedido do servidor do Order Manager. O id do pedido é utilizado para realizar a chamada.</p>
 
 <blockquote>
-  <p>Somente os pedidos com status <strong>DRAFT</strong> podem ser excluídos.
-Endpoint:</p>
+  <p>Somente os pedidos com status <strong>DRAFT</strong> podem ser excluídos.</p>
+
+  <p>Endpoint:</p>
 
   <p><strong>DELETE</strong> */orders/<id>*</id></p>
 </blockquote>
